# TII_assignment

./: Dockerfile  README.md
assignment_ros2_package/: CMakeLists.txt  package.xml
assignment_ros2_package/src/: ros2_node_function1_position_control.cpp  ros2_node_function2_velocity_control.cpp
docker_folder/: Dockerfile  ros_entrypoint.sh
ros2_nodes/: ros2_node_function1_position_control.cpp  ros2_node_function2_velocity_control.cpp
